# TopMostTool

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  RELEASE_NOTES.md  main.py  pyproject.toml  requirements.txt  topmost_tool.py  version_info.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish_pypi.yml
config/: __init__.py  config.json  config_manager.py
core/: __init__.py  app_state.py  hotkey_listener.py  i18n.py  logger.py  window_manager.py
locales/: en.json  zh_CN.json
scripts/: build_linux.sh  build_macos.sh  build_windows.bat
tests/: __init__.py  test_app_state.py  test_comprehensive.py  test_config_manager.py  test_hotkey_listener.py  test_window_manager.py
ui/: hotkey_dialog.py  settings_window.py  tray_app.py
